2010-09-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	PR bootstrap/45796
	* Makefile.in (build/gen%$(build_exeext)): Move rule after all
	special-casing for generators and turn into ...
	((genprog:%=build/gen%$(build_exeext))): ... this static pattern
	rule, for better error messages in case of toplevel dependency
	errors.
	(genprog): Add hooks, rename to ...
	(genprogerr): ... this, and let genprog also contain check,
	checksum, condmd.
	((genprog:%=build/gen%$(build_exeext))): Rename to ...
	((genprogerr:%=build/gen%$(build_exeext))): ... this.
	(build/genhooks$(build_exeext)): Remove now-unneeded dependency.

2010-09-30  Jonathan Wakely  <jwakely.gcc@gmail.com>
            Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* doc/install.texi: Suggest using LD_LIBRARY_PATH to find libs
	for GMP, MPFR and MPC.

2010-09-30  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* config/sparc/sparc.opt (mimpure-text): Move ...
	* config/sol2.opt: ... here.
	Correct description.
	* config.gcc (*-*-solaris2*): Add sol2.opt to extra_options.
	* doc/invoke.texi (Option Summary, SPARC Options): Move
	-mimpure-text, -mno-impure-text, -threads, -pthreads, -pthread ...
	(Option Summary, Solaris 2 Options): ... here.
	(Submodel Options, Solaris 2 Options): New menu entry.
	(SPARC Options): Move -mimpure-text, -threads, -pthreads, -pthread ...
	(Solaris 2 Options): ... here.

2010-09-30  Michael Eager  <eager@eagercon.com>

	* extend.texi (interrupt_handler): Add MicroBlaze to list.
	(save_volatiles): Describe option for MicroBlaze.
	* invoke.texi: Add MicroBlaze Options.
	* contrib.texi: Add acknowledgment. 
	* md.texi: Add MicroBlaze d and z constraints.
	* install.texi: Add microblaze-*-elf.
	* configure.ac: Add microblaze-*-* to target list.
	* configure: Regenerate.
	* config.gcc: Add microblaze*-*-*, microblaze*-linux*.
	* config/microblaze/microblaze-protos.h: New.
	* config/microblaze/crti.s: New.
	* config/microblaze/predicates.md: New.
	* config/microblaze/linux.h: New.