@@ -1,3 +1,9 @@
+2010-09-30  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/31261
+	* fold-const.c (fold_binary): Optimize ((A & N) + B) & M
+	for constants M and N, M == (1LL << cst) - 1 && (N & M) == M.
+
 2010-09-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	PR bootstrap/45796
